# datadex

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  poe_tasks.toml  pyproject.toml
.github/workflows/: ci.yml  docker-build-push.yml  enforce-dev-to-main.yml
examples/: multi-source-join.yml  postgres-incremental.yml  simple-csv-pipeline.yml
src/datadex/: __init__.py  cli.py  plugin.py
src/datadex/api/: __init__.py  main.py
src/datadex/api/routers/: __init__.py  pipelines.py  quality.py  runs.py
src/datadex/config/: defaults.py  loader.py
src/datadex/connectors/: base.py  csv_file.py  kafka.py  mysql.py  postgres.py  rest_api.py  s3.py
src/datadex/engine/: __init__.py  incremental.py  parallel.py  runner.py  scheduler.py
src/datadex/lineage/: __init__.py  export.py  graph.py  tracker.py
src/datadex/quality/: __init__.py  alerts.py  checks.py  scorecard.py
src/datadex/transforms/: __init__.py  base.py  cast.py  deduplicate.py  derive.py  filter.py  join.py
tests/: conftest.py  test_cli.py  test_connectors.py  test_lineage.py  test_quality.py  test_transforms.py
